--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "next": "15.4.6"
+    "zod": "^3",
+    "@vercel/ai": "latest",
+    "langfuse": "^2",
+    "better-sqlite3": "^9",
+    "cheerio": "^1"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -22,3 +27,5 @@
     "tailwindcss": "^4"
   }
 }
+
+
