--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "better-sqlite3": "^9",
     "cheerio": "^1",
     "ai":"latest",
-    "@ai-sdk/openai": "latest",
+    "@ai-sdk/openai": "latest"
   },
   "devDependencies": {
     "typescript": "^5",
